# CppProgramming

SandPile/: CMakeLists.txt  Coordinates.tsv  README.md  bmp.cpp  bmp.h  main.cpp  parser.cpp  parser.h  pileChanging.cpp  pileChanging.h
Uint_2022/: CMakeLists.txt  README.md
Uint_2022/Google_tests/: CMakeLists.txt  number_test.cpp
Uint_2022/lib/: number.cpp  number.h
